--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "css-loader": "^6.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sass": "^1.50.0",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
